--- a/index.html
+++ b/index.html
@@ -27,5 +27,71 @@
                 </button>
                 <a class="navbar-brand" href="#">Murphy Design</a>
             </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Index</a></li>
+                    <li><a href="#Biography">Biography</a></li>
+                    <li><a href="#Projects">Projects</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container" id="Biography">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Biography</div>
+                    <div class="panel-body"><img src="./assets/img/selfpic.png" class="img-circle img-responsive"
+                            style="width:25%" alt="Portrait"></div>
+                    <a
+                        href="https://medium.com/@gavinhmurphy/low-contrast-minimalist-design-in-webpages-is-the-hype-worth-the-hurt-1d7f52361f6c">Medium
+                        Blog</a>
+                    <a
+                        href="https://medium.com/@gavinhmurphy/crypto-js-an-easy-and-accessible-answer-for-data-protection-1ab5028c372a">Medium
+                        Blog</a>
+                        <!-- fill with blog posts as published -->
+                    <div class="panel-footer">Current student at UC Berkeley coding boot-camp. Passionate about food, design, and the global community</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="Projects">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">EzVibez</div>
+                    <div class="panel-body"><img src="./assets/img/ezvibez.png" class="img-responsive"
+                            style="width:100%" alt="Image"></div>
+                    <div class="panel-footer">EzVibez was built with Foundation, Particle js, Lyrics.ovh , Tastedive,
+                        and Meaningcloud. Our site queries multiple apis in order to deliver lyrics and a polarity
+                        analysis for them. Our users will be able to view the lyrics on a dynamic and fun website which
+                        will offer artist recommendations and a search history saved in lcoal storage. The site is
+                        populated through Javascript to display lyrics in their entirety with a mood analysis.</div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Password Generator</div>
+                    <div class="panel-body"><img src="./assets/img/password.png" class="img-responsive"
+                            style="width:100%" alt="Image"></div>
+                    <div class="panel-footer">This project was done completely in Javascript since the CSS styling and
+                        HTML was provided. Oringal thoughts used the coded numbers for characters but I opted for a more
+                        staight forward approach</div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Day Planner</div>
+                    <div class="panel-body"><img src="./assets/img/calender.png" class="img-responsive"
+                            style="width:100%" alt="Image"></div>
+                    <div class="panel-footer">This project is a small calender application to track tasks during work
+                        hours. It displays upcoming hour blocks in military time with the option to save to local
+                        storage and recall those tasks while tracking real time.</div>
+                </div>
+            </div>
+        </div>
+    </div><br>
+    <br><br>
 </body>
 </html>
