--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/public/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,14 +43,12 @@
             <div class="col-sm-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Biography</div>
-                    <div class="panel-body"><img src="./assets/img/selfpic.png" class="img-circle img-responsive"
+                    <div class="panel-body"><img src="./assets/selfpic.png" class="img-circle img-responsive"
                             style="width:25%" alt="Portrait"></div>
                     <a
-                        href="https://medium.com/@gavinhmurphy/low-contrast-minimalist-design-in-webpages-is-the-hype-worth-the-hurt-1d7f52361f6c">Medium
-                        Blog</a>
+                        href="https://medium.com/@gavinhmurphy/low-contrast-minimalist-design-in-webpages-is-the-hype-worth-the-hurt-1d7f52361f6c">Low Contrast Design article</a>
                     <a
-                        href="https://medium.com/@gavinhmurphy/crypto-js-an-easy-and-accessible-answer-for-data-protection-1ab5028c372a">Medium
-                        Blog</a>
+                        href="https://medium.com/@gavinhmurphy/crypto-js-an-easy-and-accessible-answer-for-data-protection-1ab5028c372a">Crypto JS article</a>
                         <!-- fill with blog posts as published -->
                     <div class="panel-footer">Current student at UC Berkeley coding boot-camp. Passionate about food, design, and the global community</div>
                 </div>
@@ -61,7 +60,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">EzVibez</div>
-                    <div class="panel-body"><img src="./assets/img/ezvibez.png" class="img-responsive"
+                    <div class="panel-body"><img src="./assets/ezvibez.png" class="img-responsive"
                             style="width:100%" alt="Image"></div>
                     <div class="panel-footer">EzVibez was built with Foundation, Particle js, Lyrics.ovh , Tastedive,
                         and Meaningcloud. Our site queries multiple apis in order to deliver lyrics and a polarity
@@ -73,7 +72,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Password Generator</div>
-                    <div class="panel-body"><img src="./assets/img/password.png" class="img-responsive"
+                    <div class="panel-body"><img src="./assets/password.png" class="img-responsive"
                             style="width:100%" alt="Image"></div>
                     <div class="panel-footer">This project was done completely in Javascript since the CSS styling and
                         HTML was provided. Oringal thoughts used the coded numbers for characters but I opted for a more
@@ -83,7 +82,7 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Day Planner</div>
-                    <div class="panel-body"><img src="./assets/img/calender.png" class="img-responsive"
+                    <div class="panel-body"><img src="./assets/calender.png" class="img-responsive"
                             style="width:100%" alt="Image"></div>
                     <div class="panel-footer">This project is a small calender application to track tasks during work
                         hours. It displays upcoming hour blocks in military time with the option to save to local
@@ -93,5 +92,28 @@
         </div>
     </div><br>
     <br><br>
+    <div class="container" id="Contact">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Contact Me</div>
+                    <li>Email: gavinhmurphy@gmail.com</li>
+                    <li>Phone Number: (707)236-0679</li>
+                    <li><a href="https://github.com/ghmurphy2">GitHub
+                        </a>
+                    <li><a href="https://linkedin.com/in/gavinhmurphy">LinkedIn
+                        </a>
+                    </li>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="container-fluid text-center">
+        <p>Gavin Murphy 2021</p>
+        <form class="form-inline">
+            <input type="email" class="form-control" size="50" placeholder="Email Address">
+            <button type="button" class="btn btn-danger">Information Request</button>
+        </form>
+    </footer>
 </body>
 </html>
