--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container" id="Biography">
         <div class="row">
             <div class="col-sm-12">
-                <div class="panel panel-primary">
+                <div class="panel panel-success">
                     <div class="panel-heading">Biography</div>
                     <div class="panel-body"><img src="./assets/selfpic.png" class="img-circle img-responsive"
                             style="width:25%" alt="Portrait"></div>
@@ -71,12 +71,10 @@
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">Password Generator</div>
-                    <div class="panel-body"><img src="./assets/password.png" class="img-responsive"
+                    <div class="panel-heading">Dung</div>
+                    <div class="panel-body"><img src="./assets/dungeon.png" class="img-responsive"
                             style="width:100%" alt="Image"></div>
-                    <div class="panel-footer">This project was done completely in Javascript since the CSS styling and
-                        HTML was provided. Oringal thoughts used the coded numbers for characters but I opted for a more
-                        staight forward approach</div>
+                    <div class="panel-footer">Dungeon runner is a fullstack 8 bit platformer using Phaser 3. It has an accosiated database for comments which was built with Sequelize, Node.JS, DOTENV, and Express. User information is protected using BCrypt and supports User signup and login for comment interaction. Many features are in developement but plans for additon game function and mulitplayer are ongoing.</div>
                 </div>
             </div>
             <div class="col-sm-4">
