added more buttons and pdf download

--- a/home.html
+++ b/home.html
@@ -97,10 +97,14 @@
                     <div class="panel-heading">Contact Me</div>
                     <li>Email: gavinhmurphy@gmail.com</li>
                     <li>Phone Number: (707)236-0679</li>
-                    <li><a href="https://github.com/ghmurphy2">GitHub
-                        </a>
-                    <li><a href="https://linkedin.com/in/gavinhmurphy">LinkedIn
-                        </a>
+                    <li><button type="button" class="btn btn-success"><a href="https://github.com/ghmurphy2">GitHub
+                        </a></button>
+                    <li><button type="button" class="btn btn-success"><a href="https://linkedin.com/in/gavinhmurphy">LinkedIn
+                    </button>
+                    </a>
+                    <li><button type="button" class="btn btn-danger">Download Resume
+                        <a href="./assets/Resume.pdf" download
+                          ></button></a></div></li>
                     </li>
                 </div>
             </div>
@@ -111,6 +115,8 @@
         <form class="form-inline">
             <input type="email" class="form-control" size="50" placeholder="Email Address">
             <button type="button" class="btn btn-danger">Information Request</button>
+        
+        
         </form>
     </footer>
 </body>
