--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">Dung</div>
+                    <div class="panel-heading">Dungeon Runner</div>
                     <div class="panel-body"><img src="./assets/dungeon.png" class="img-responsive"
                             style="width:100%" alt="Image"></div>
                     <div class="panel-footer">Dungeon runner is a fullstack 8 bit platformer using Phaser 3. It has an accosiated database for comments which was built with Sequelize, Node.JS, DOTENV, and Express. User information is protected using BCrypt and supports User signup and login for comment interaction. Many features are in developement but plans for additon game function and mulitplayer are ongoing.</div>
